# finbot

./: main.py  pyproject.toml
finbot/: config.py  helpdesk.py  load_db.py
