[tool.poetry]
name = "finbot"
version = "0.1.0"
description = "Bot for answering your Banking questions"
authors = ["Irfan Shah <irfan@setu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.35.10"
ollama = "^0.2.1"
token-count = "^0.2.1"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
